# qttorch

./: CMakeLists.txt  init.lua  qttorch.cpp  qttorch.h
doc/: README.md
generic/: qttorch.cpp
rocks/: qttorch-scm-1.rockspec
